Bugfix - youtube preview button alignment

--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -2309,8 +2309,10 @@ $pl_controls_padding: 1.2rem;
                 height: 45px;
                 background-color: var(--color-bg-1);
                 opacity: 0.8;
-                position: absolute;
+                position: relative;
+                top: 0;
                 border: none;
+                border-radius: 0;
 
                 .icon {
                     visibility: visible;
